doc links to specific GenePattern CellFie tutorial commit

--- a/doc.html
+++ b/doc.html
@@ -1,6 +1,6 @@
 <!DOCTYPE meta PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
    <head>
-      <meta http-equiv="refresh" content="0;url=https://github.com/LewisLabUCSD/CellFie/wiki">
+      <meta http-equiv="refresh" content="0;url=https://github.com/LewisLabUCSD/CellFie/wiki/Tutorial-:-GenePattern-module/cfeb1d460ee81509df7ecf2730a762f5b7d6e087">
    </head>
 </html>
